# RLite

./: .gitmodules  LICENSE  README.md  pyproject.toml
examples/: tinyzero_countdown_remote.py
native/transport/: CMakeLists.txt
native/transport/include/rlite_transport/: native_api.h
native/transport/src/: rlite_transport_native.cpp
patches/sglang/: 0001-model-runner-rlite-hook.patch  0002-http-server-rlite-receive-endpoints.patch
scripts/: build_transport_native.py
src/rlite/: __init__.py
src/rlite/integrations/: __init__.py  megatron.py  remote.py  sglang.py  transformers.py
src/rlite/resharding/: __init__.py  coordinator.py  executor.py  planner.py  types.py
src/rlite/transport/: __init__.py  adapters.py  backends.py  native.py  session.py  types.py
src/rlite/weight_mapping/: __init__.py  profiles.py  rules.py  types.py
tests/: test_resharding_execution.py  test_resharding_integration_gated.py  test_resharding_integrations.py  test_resharding_planner.py  test_resharding_receive.py  test_transformers_fsdp_integrations.py  test_transport_integration_gated.py  test_transport_session.py  test_transport_types.py  test_weight_mapping.py
